fix alignment

--- a/client/src/stylings/course.css
+++ b/client/src/stylings/course.css
@@ -15,7 +15,14 @@
     align-items: center;
 }
 
-.rowPrerequisites{display:flex; flex-direction:row;}
+.rowPrerequisites{
+    display:flex; 
+    flex-direction:row;
+    max-width: var(--bw-verylarge);
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+}
 
 .btn{
     white-space: nowrap;
@@ -78,7 +85,10 @@
 }
 
 .dynamic-text{
-    font-size: var(--fs-4);
+    font-size: var(--fs-3);
+    font-weight: var(--fw-bold);
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 @media screen and (min-width:600px){
